--- a/src/App.css
+++ b/src/App.css
@@ -169,4 +169,23 @@ body {
     .search-box input:focus {
         width: 100%;
     }
+    .header h1 {
+  margin: 0;
+  font-size: 2.0rem;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+}
+}
+
+@media (max-width: 380px) {
+
+.filter-btn {
+    background: white;
+    border: 1px solid #ddd;
+    padding: 8px 15px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 0.7rem;
+    transition: all 0.2s;
+    color: #555;
+}
 }
